--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,13 +4,10 @@
 
 @model FormData
 <div class="main">
-    <form asp-action="Create" asp-controller="Home" method="post">
-        <div class="form-group">
+    <form asp-action="Result" asp-controller="Home" method="post">
             <span asp-validation-for="Name"></span>
             <label asp-for="Name"></label>
-            <input asp-for"Name">
-        </div>
-        <div class="form-group">
+            <input asp-for="Name">
             <span asp-validation-for="Location"></span>
             <label asp-for="Location"></label>
             <select asp-for="Location">
@@ -20,8 +17,6 @@
                 <option>Los Angeles</option>
                 <option>Phoenix</option>
             </select>
-        </div>
-        <div class="form-group">
             <span asp-validation-for="Language"></span>
             <label asp-for="Language"></label>
             <select asp-for="Language">
@@ -31,13 +26,10 @@
                 <option>English</option>
                 <option>Spanish</option>
             </select>
-        </div>
-        <div class="form-group">
             <span asp-validation-for="Comment"></span>
             <label asp-for="Comment"></label>
             <textarea asp-for="Comment" rows="6"></textarea>
-        </div>
-        <input type="submit" id="submitbtn">
+            <input type="submit" id="submitbtn">
     </form>
 </div>
 
